# UW-SDIC_ROS_Scan_Filtering

./: README.md
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: turtlemimic.launch
point_filter/: CMakeLists.txt  LICENSE  README.md  package.xml
point_filter/config/: controller_config.yaml
point_filter/include/point_filter/: point_filter.h
point_filter/launch/: follow.launch  follow_and_map.launch  point_filter.launch
point_filter/launch/include/: ig_collect_scans.launch  start_cam_F1.launch  start_husky.launch  start_velodynes.launch
point_filter/src/: filter.cpp  point_filter_buffer.cpp  point_filter_node.cpp
test_stubs/: CMakeLists.txt  package.xml
test_stubs/launch/: testsuite.launch
test_stubs/src/: bb_subscriber.cpp  im_publisher.cpp  im_publisher_rr.cpp  im_subscriber.cpp  pclFile_publisher.cpp  pcl_publisher.cpp  pcl_subscriber.cpp  test_bag_reader.cpp  test_scan_reader.cpp
