<?xml version="1.0"?>
<package format="2">
  <name>point_filter</name>
  <version>0.0.1</version>
  <description>Package to filter vehicles/other objects from 3D point clouds using darknet CV</description>
  <author email="BEAM@beam.io">BEAM</author>
  <maintainer email="BEAM@beam.io">BEAM</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/BEAMRobotics/beam_follower</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>

</package>
